# envoy-wasm

./: .gitignore  Cargo.toml
api/wasm/cpp/: proxy_wasm_intrinsics.proto
api/wasm/rust/src/: enums.rs  filter.rs  lib.rs  logger.rs  sdk.rs
examples/wasm/: Dockerfile-proxy  Makefile  Makefile.docker_cpp_builder  README.md  docker-compose.yaml  envoy.yaml  envoy_filter_http_wasm_example.cc  envoy_filter_http_wasm_example.wasm  envoy_filter_http_wasm_example.wat  rust_wasm.wasm  rust_wasm.wat
examples/wasm/rust-wasm/: Cargo.toml
examples/wasm/rust-wasm/src/: filter.rs  lib.rs
