[package]
name = "rust-wasm"
version = "0.1.0"
authors = ["Steve Manuel <nilslice@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
proxy_wasm = { path = "../../../api/wasm/rust" }
chrono = "0.4.10"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]